--- a/Config.toml
+++ b/Config.toml
@@ -1,29 +1,29 @@
 #This is an example of config files
 
 [[Config]]
-seed = 1234 #choose yout seed
-generate_reference = 0 # 0 if user have his ref, 1 if not have reference
+seed = 1234 #choose yout seed => FATTO
+generate_reference = 0 # 0 if user have his ref, 1 if not have reference => FATTO
 #*** if generate_reference == 1 ***#
-path_reference = "./reference.fasta" #path where reference is saved
-path_to_save_files = "./fileoutput"
-path_to_save_plot = "./plot"
+path_reference = "./reference.fasta" #path where reference is saved => FATTO
+path_to_save_files = "./fileoutput" #where you want save outputfile => FATTO
+path_to_save_plot = "./plot" #where you want save your plot => FATTO
 
-Generate_graph = 1 #1 if graph is not already avaliable
-Path_to_Graph = "./graph_AM.csv" #example path where read graph
-Type_of_graph = "matrix_adjacency" #??
+Generate_graph = 1 #1 if graph is not already avaliable => FATTO
+Path_to_Graph = "./graph_AM.csv" #example path where read graph => FATTO
+
 
 [[OutputGT]]
-Tree_Newick = 1 #1 if you want graph in newick format
-Final_configuration = 1 #if you want graph after simulation
-Driver_list = 1 #list of all driver mutation
-Driver_Tree = 1 #tree of driver mutation
+Tree_Newick = 1 #1 if you want graph in newick format => FATTO
+Final_configuration = 1 #if you want graph after simulation => FATTO
+Driver_list = 1 #list of all driver mutation => FATTO
+Driver_Tree = 1 #tree of driver mutation => FATTO
 
 [[FileOutputExperiments]]
-Single_cell_genotype = "./Experiments/"
-Single_cell_fasta = 0 #1 if you want save fasta of cells
+Single_cell_genotype = "./Experiments/" #
+Single_cell_fasta = 0 #1 if you want save fasta of cells => FATTO se ho capito giusto
 Single_cell_noise = 1
-VAF_GT = 1 #if model substitution is ISA
-Bulk_noise = 1 #if model substitution is ISA
+VAF_GT = 1 #if model substitution is ISA => FATTO
+Bulk_noise = 1 #if model substitution is ISA => FATTO
 reads = "" #??
 
 [[FileOutputPlot]]
