--- a/Parameters.toml
+++ b/Parameters.toml
@@ -36,12 +36,12 @@ type_isa = 1 #type of model evolution, if value 0 specificate submodel
 #*** if type_isa = 1 ***#
 neut_mut_rate = 0.000025 #rate of neutral mutation
 #*** if type_isa = 0 ***#
-sub_model = "model" #decide substitution matrix for mutation, possible value ->[]
+sub_model = "K80" #decide substitution matrix for mutation, possible value ->[]
 indel_size = 300
 indel_rate = 0.0005
 branch_length = 10.0
-params = [0.05, 0.03]
-
+#params = [:α => 0.5, :β => 0.3]
+params = [{":α" = 0.5}, {":β" = 0.3}]
 [[BulkExperiment]]
 coverage = 10.0
 #read_lenght = ??
@@ -49,7 +49,7 @@ FP = 0.0000005 #rate false positive
 FN = 0.0000002 #rate false negative
 
 [[ART]]
-command = `` #if user want write your call
+command = "" #`` #if user want write your call
 #*** Otherwise write paramaters ***#
 profile = "HS25" #The name of Illumina sequencing system of the built-in profile used for simulation
 len_read = 150 #the length of reads to be simulated
