--- a/Parameters.toml
+++ b/Parameters.toml
@@ -40,8 +40,7 @@ sub_model = "K80" #decide substitution matrix for mutation, possible value ->[]
 indel_size = 300
 indel_rate = 0.0005
 branch_length = 10.0
-#params = [:α => 0.5, :β => 0.3]
-params = [{":α" = 0.5}, {":β" = 0.3}]
+params = [{"alpha" = 0.5, "beta" = 0.3}]
 [[BulkExperiment]]
 coverage = 10.0
 #read_lenght = ??
@@ -49,15 +48,13 @@ FP = 0.0000005 #rate false positive
 FN = 0.0000002 #rate false negative
 
 [[ART]]
-command = "" #`` #if user want write your call
+command = "`prova`" #if user want write your call
 #*** Otherwise write paramaters ***#
 profile = "HS25" #The name of Illumina sequencing system of the built-in profile used for simulation
 len_read = 150 #the length of reads to be simulated
 tot_num_reads = 10 #number of reads/read pairs to be generated per sequence
 outfile_prefix = "example" #the prefix of output filename
-ef = 1 #indicate to generate the zero sequencing errors SAM file as well the regular one
-#NOTE: the reads in the zero-error SAM file have the same alignment positions
-no_ALN = 0 #do not output ALN alignment file
+
 paired_end = 0 # indicate a paired-end read simulation or to generate reads from both ends of amplicons
 	                    #NOTE: art will automatically switch to a mate-pair simulation if the given mean fragment size >= 2000
 #*** if paired_end == 1, they are require **#
