--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 PhyloNetworks = "33ad39ac-ed31-50eb-9b15-43d0656eaa72"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 WGLMakie = "276b4fcb-3e11-5398-bf8b-a0c2d153d008"
