--- a/Config.toml
+++ b/Config.toml
@@ -27,7 +27,7 @@ Bulk_noise = 1 #if model substitution is ISA => FATTO
 Alignment = 1 #do output ALN alignment file => FATTO
 
 [[FileOutputPlot]]
-Time_of_sampling = [10, 20, 50, 70, 100, 150, 200, 250] #last element < t_max simulation => FATTO
+Time_of_sampling = [10, 20] #last element < t_max simulation => FATTO
 Dynamic_Clonal_genotype = 1 #grafico in cui ho la crescita del num di cell per ogni sottopopolazione(fino al tempo finale)
 #Division_time =1 or 0 #
 Graph_configuration = 1 #se vuole il plot del grafico => FATTO
