--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "JOG_Space"
+name = "J_Space"
 uuid = "fd1b0027-9d6f-49b5-97ba-2af5672b046a"
 authors = ["alessandro_guidi <a.guidi@campus.unimib.it>"]
 version = "0.1.0"
@@ -13,6 +13,7 @@ DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GraphIO = "aa1b3936-2fda-51b9-ab35-c553d3a640a2"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 JSServe = "824d6782-a2ef-11e9-3a09-e5662e0c26f9"
@@ -23,6 +24,7 @@ PhyloNetworks = "33ad39ac-ed31-50eb-9b15-43d0656eaa72"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StringDistances = "88034a9c-02f8-509d-84a9-84ec65e18404"
 TOML = "fa267f1f-6049-4f14-aa54-33bafae1ed76"
 Tables = "bd369af6-aec1-5ad0-b16a-f7cc5008161c"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
