--- a/Experiments/Experiment_Pipeline/environment_j_space.yml
+++ b/Experiments/Experiment_Pipeline/environment_j_space.yml
@@ -1,4 +1,4 @@
-name: /dati-raid/BimiB/gascolani/conda/conda_env/gatk
+name: "changeme"
 channels:
   - bioconda
   - defaults
@@ -139,4 +139,4 @@ dependencies:
   - xz=5.2.4=h14c3975_4
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
-prefix: /dati-raid/BimiB/gascolani/conda/conda_env/gatk
+prefix: "changeme"
