--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,18 @@
 name = "J_Space"
 uuid = "fd1b0027-9d6f-49b5-97ba-2af5672b046a"
-authors = ["alessandro_guidi <a.guidi@campus.unimib.it>",
-           "fabrizio_angaroni <fabrizio.angaroni@unimib.it>"]
+authors = ["alessandro_guidi <a.guidi@campus.unimib.it>", "fabrizio_angaroni <fabrizio.angaroni@unimib.it>"]
 version = "0.1.0"
 
 [deps]
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
