--- a/Config.toml
+++ b/Config.toml
@@ -6,8 +6,8 @@ generate_reference = 1
 #*** if generate_reference == 1 ***#
 path_reference = ".\\reference.fasta"
 
-path_to_save_files = ".\\fileoutput\\"
-path_to_save_plot = ".\\Plot\\"
+path_to_save_files = "./fileoutput/"
+path_to_save_plot = "./Plot/"
 
 Generate_graph = 1
 #*** if Generate_graph == 0 ***#
