--- a/Config.toml
+++ b/Config.toml
@@ -4,7 +4,7 @@
 seed = 1234
 generate_reference = 1
 #*** if generate_reference == 1 ***#
-path_reference = ".\\reference.fasta"
+path_reference = "./reference.fasta"
 
 path_to_save_files = "./fileoutput/"
 path_to_save_plot = "./Plot/"
@@ -15,8 +15,8 @@ Path_to_Graph = "./utility/Example_adj_matrix.txt"
 
 Tree_Driver_Configure = 0
 #*** if Tree_Driver == 1 ***#
-edgelist_treedriver = ".\\utility\\Tree_driver_example.txt"
-driver_birth_rates = ".\\utility\\driver_advantage.txt"
+edgelist_treedriver = "./utility/Tree_driver_example.txt"
+driver_birth_rates = "./utility/driver_advantage.txt"
 [[OutputGT]]
 Tree_Newick = 1
 Final_configuration = 1
