--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 GraphMakie = "1ecd5474-83a3-4783-bb4f-06765db800d2"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 MetaGraphs = "626554b9-1ddb-594c-aa3c-2596fe9399a5"
 NetworkLayout = "46757867-2c16-5918-afeb-47bfcb05e46a"
 PhyloNetworks = "33ad39ac-ed31-50eb-9b15-43d0656eaa72"
